# folder-content-aggregator

./: .gitignore  README.md
client/: index.html
server/go/src/jsdw/master/: master.go
server/go/src/jsdw/master/diff/: diff.go
server/go/src/jsdw/shared/timings/: timings.go
server/go/src/jsdw/watcher/: watcher.go
server/go/src/jsdw/watcher/diff/: diff.go
server/rust/: Cargo.toml
server/rust/src/lib/: lib.rs
server/rust/src/lib/master/: state.rs
server/rust/src/lib/shared/: mod.rs  timings.rs  types.rs
server/src/jsdw/master/: master.go
server/src/jsdw/master/files/: files.go
server/src/jsdw/types/: types.go
server/src/jsdw/watcher/: watcher.go
server/src/jsdw/watcher/diff/: diff.go
