[package]
name = "rust"
version = "0.1.0"
authors = ["James Wilson <me@unbui.lt>"]

[lib]
name = "lib"
path = "src/lib/lib.rs"

[dependencies]
rand = "0.3"
hyper = "0.11.6"
tokio-core = "0.1.10"
futures = "0.1.17"
futures-cpupool = "0.1.7"
structopt = "0.1.4"
structopt-derive = "0.1.4"
serde_json = "1.0"
serde_derive = "1.0"
serde = "1.0"
hyper-staticfile = "0.1.1"